@@ -37,7 +37,7 @@
 	</rectitle>
 
 	<progressbar>
-		<area debug="true" condition="not{timeshift}" x="9%" y="{areaheight}*0.8694" width="82%" height="{areaheight}*0.0287" layer="3">
+		<area condition="not{timeshift}" x="9%" y="{areaheight}*0.8694" width="82%" height="{areaheight}*0.0287" layer="3">
 			<drawimage x="0" y="0" width="{current}/{total}*{areawidth}" height="{areaheight}" imagetype="skinpart" path="replayProgress" />
 		</area>
 		<area condition="{timeshift}" x="9%" y="{areaheight}*0.8704" width="82%" height="{areaheight}*0.0287" layer="3">
